# genes_parallel_project

./: .gitignore  CMakeLists.txt  Project.cbp  README.md  ahocorasick.cpp  main.cpp  main.cu
ahocorasick/: ahocorasick.cpp
data/: new.csv
data/archive/: app.cpp  p2.fasta
file_readers/: read_csv.cpp  read_fasta.cpp
genes-exe/: CMakeLists.txt  app.cpp
headers/: ahocorasick.h  concurrent_q.h  device_selector.h  oneapi_parallel.h  read_csv.h  read_fasta.h
include/: ahocorasick.h  app.h
includes/: CMakeLists.txt  ahocorasick.h  app.h  common.h  csv_file.h  csv_file.h.in  fasta_reader.h  read.h  util.h
oneapi/: oneapi_parallel.cpp
src/: CMakeLists.txt  ahocorasick.cpp  ahocorasick.cu  fasta_reader.cpp  main.cpp  read.cpp  sequence.cpp
src/main/: app.cpp  main.cpp
src/util/: ahocorasick.cpp
